# F1-Prediction

./: Dockerfile.backend  README.md  api.py  docker-compose.yml  get_2026_teams.py  package-lock.json  pyproject.toml  recovered_model.py  team_mappings.json  trained_model.pkl
.f1_cache/2024/2024-05-05_Miami_Grand_Prix/2024-05-03_Practice_1/: _extended_timing_data.ff1pkl  driver_info.ff1pkl  session_info.ff1pkl  session_status_data.ff1pkl
.f1_cache/2025/2025-05-04_Miami_Grand_Prix/2025-05-02_Practice_1/: session_info.ff1pkl
.f1_cache/2026/2026-03-08_Australian_Grand_Prix/2026-03-06_Practice_2/: _extended_timing_data.ff1pkl  session_status_data.ff1pkl  timing_app_data.ff1pkl
.f1_cache/2026/2026-03-08_Australian_Grand_Prix/2026-03-07_Practice_3/: driver_info.ff1pkl
.f1_cache/2026/2026-03-15_Chinese_Grand_Prix/2026-03-14_Qualifying/: driver_info.ff1pkl
.f1_cache/2026/2026-03-29_Japanese_Grand_Prix/2026-03-27_Practice_1/: _extended_timing_data.ff1pkl  timing_app_data.ff1pkl
.f1_cache/2026/2026-03-29_Japanese_Grand_Prix/2026-03-27_Practice_2/: _extended_timing_data.ff1pkl  session_info.ff1pkl  timing_app_data.ff1pkl
.f1_cache/2026/2026-03-29_Japanese_Grand_Prix/2026-03-28_Practice_3/: driver_info.ff1pkl
f1-api/: f1_fe.py
f1-dashboard/: Dockerfile.frontend  package-lock.json  package.json  tailwind.config.js
f1-dashboard/src/: AeroMap.jsx  App.jsx  DataGrid.jsx  ErrorBoundary.jsx  H2H.jsx  RaceTimeline.jsx
miami/: log_fp1.txt  log_q.txt  log_r.txt  log_s.txt  log_sq.txt  miami_model.py  p1.py  q.py  r.py  s.py  sq.py
(+29 files in other folders)
